# relay

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: python.yml  release.yml  rust.yml  static.yml
crates/relay_bp/: Cargo.toml
crates/relay_bp_py/: Cargo.toml
crates/relay_bp_py/src/: decoder.rs  observable_decoder.rs
examples/: BivariateBicycleCodeAnalysis.ipynb  GettingStarted.ipynb  RotatedSurfaceCodeAnalysis.ipynb
examples/data/: rotated_surface_code_fine_ler_sweep.csv  stim_getting_started.csv
src/relay_bp/: decoder.py  observable_decoder.py
src/relay_bp/bp/: __init__.py
src/relay_bp/stim/: noise.py
tests/: conftest.py  test_observable_decoding.py
tests/bp/: test_min_sum.py  test_min_sum_fixed.py  test_relay_decoding.py
tests/stim/: test_sinter.py
tests/testdata/: circuits.py  utils.py
tests/testdata/bicycle_bivariate/: circuit=bicycle_bivariate_144_12_12_memory_X,distance=12,rounds=12,error_rate=0.0015,noise_model=uniform_circuit,basis=CX,A=x^3+y+y^2,B=y^3+x+x^2.stim  circuit=bicycle_bivariate_144_12_12_memory_X,distance=12,rounds=12,error_rate=0.0025,noise_model=uniform_circuit,basis=CX,A=x^3+y+y^2,B=y^3+x+x^2.stim  circuit=bicycle_bivariate_144_12_12_memory_X,distance=12,rounds=12,error_rate=0.0045,noise_model=uniform_circuit,basis=CX,A=x^3+y+y^2,B=y^3+x+x^2.stim  circuit=bicycle_bivariate_144_12_12_memory_X,distance=12,rounds=12,error_rate=0.005,noise_model=uniform_circuit,basis=CX,A=x^3+y+y^2,B=y^3+x+x^2.stim  (+63 more)
(+578 files in other folders)
